--- a/plenaries/educ.html
+++ b/plenaries/educ.html
@@ -42,10 +42,12 @@
       <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
-      <li class="nav-item">
+      -->
+      <li class="nav-item active">
         <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
@@ -54,15 +56,19 @@
       <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
+      -->
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../book/index.html">Reading List</a>
       </li>
+      -->
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
@@ -71,21 +77,23 @@
     </ul>
   </div>
 </nav>
-        <div class="container">
+    <!--
+    <div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
 
 		<div class="container">
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Startup Cleanup</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/startupf.png" alt="Startup Cleanup"/>
+						<h1>Education vs Entrepreneurship </h1>
 						<p class="card-text">
-							<p>Profit or Planet, the two most 'unrelated' economic topics a few decade ago, are now emergent as interrelated. While our economy remains relatively stable as the number of people living on the planet has experienced exponential growth in the past century, our planet is not ready to take the toll. Consequences of environment loss are dire, including scarcity of resources, loss of indigenous culture, lack of biodiversity, and the list goes on. Social entrepreneurship might be the solution to this problem, which is start-up companies that addresses social, cultural, or environmental issues. However, is that really enough? Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet? Be prepared to be caught in the crossfire between the debated relationship of entrepreneurship and environment at People, Planet, Profit.</p>
+							<p>With technology and innovation at the forefront of future job markets, some argue that the education system has failed to evolve with the times. As the digital age becomes increasingly imposing, it is important to critique the limitations that university may have on creativity. More and more people are choosing an ‘alternate’ career path, choosing to skip post-secondary education in light of becoming an entrepreneur. This path promotes independence, self management, and responsibility but with the path of an entrepreneur comes the danger of the unknown. Entering a more traditional university system is certainly not for everyone, but it is a more certain and ‘safe’ option for most, despite the accumulation of student debt (something absent in the path of an entrepreneur). 
+
+                            </p>
 
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
@@ -93,6 +101,7 @@
 					</div>
 				</div>
 			</div>
+            <!--
 			<div class="card card-body mt-2">
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
@@ -114,6 +123,7 @@
 					</div>
 				</div>
 			</div>
+            -->
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
