--- a/plenaries/immig.html
+++ b/plenaries/immig.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>The Plight of Workers’ Rights | The World Affairs Conference</title>
-  <meta name="description" content="Humankind is growing, and we have a big problem. By the year 2050, the global population is expected to surpass 9 million people, with the majority being bor...">
+  <title>Startup Cleanup | The World Affairs Conference</title>
+  <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -42,10 +42,12 @@
       <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
-      <li class="nav-item">
+      -->
+      <li class="nav-item active">
         <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
@@ -54,15 +56,19 @@
       <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
+      -->
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../book/index.html">Reading List</a>
       </li>
+      -->
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
@@ -71,52 +77,50 @@
     </ul>
   </div>
 </nav>
-        <div class="container">
+    <!--
+    <div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
 
 		<div class="container">
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>The Plight of Workers’ Rights</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/workerf.png" alt="The Global Food Crisis picture"/>
+						<h1>Immigration</h1>
 						<p class="card-text">
-							<p>The Plight of Workers’ Rights is a plenary that generally focuses on democracy and its core values within the workplace. Essentially, this involves the powers and rights of workers when faced against large corporate employers. The name, itself, symbolizes and is representative of the ebb in workers’ rights with regards to these large corporations today. It also explicates the fact that many workers are victim to current prevalent issues within the work environment, and how some companies refuse to acknowledge or change policies as a result of this. Finally, the plenary relates toward the future based on the theme, 2020 Vision, and looks to provide an analysis of what democracy in the workplace will presumably look like over the next decade due to the inevitable development of technologies worldwide.
-                        </p>
-
+							
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
 					</div>
 				</div>
 			</div>
+            <!--
 			<div class="card card-body mt-2">
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sblau.png" alt="Dr. Jennifer Sumner">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Shawna Bader Blau</h2>
-						Shawna Bader Blau has been in the field of advocacy and activism for working men and women seeking safe jobs within a fair work environment for several years. In addition, she has also worked in the field of international development and human rights for 17 years, and as a result, has lived or had a job in over 25 countries worldwide. Presently, Shawna leads the Solidarity Centre, the largest global rights organization based in the United States. Since October 2011, she has served as the chief executive director of this organization, leading 220 staff in Washington D.C., 26 field offices, and implementing programs in 60 different countries globally.
+						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
+						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
 					</div>
-                    
 				</div>
-                <div class="row">
+				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/dzweig.png" alt="Florian Kerschbaum">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. David Zweig</h2>
-						David Zweig is a Professor of Organizational Behaviour and Human Resources Management and Chair of the Department of Management at the University of Toronto’s Scarborough Campus. Professor Zweig teaches courses in Organizational Behaviour and HR Recruitment and Selection and his research is in the areas of employee deviance, specifically examining knowledge hiding and knowledge theft in organizations, employee cynicism, and the impact of employee surveillance. His research has been published in top management journals such as the Journal of Applied Psychology, the Journal of Organizational Behavior and Personnel Psychology and has received widespread national and international media attention. He won a ‘best paper’ award for his work on knowledge hiding in organizations and recently delivered a TEDx talk on workplace deviance and how to break this cycle of deviance in organizations.
+						<h2 class="text-center text-md-left">Adonis Yatchew</h2>
+						Adonis Yatchew’s research focuses on energy and regulatory economics, and econometrics. Since completing his Ph.D. at Harvard University, he has taught at the University of Toronto. He has also held visiting appointments at Trinity College, Cambridge University, the University of Chicago and Australian National University, among others. He the Editor-in-Chief of The Energy Journal. He has advised public and private sector companies on energy, regulatory and other matters for over 25 years and has provided testimony in numerous regulatory and litigation procedures. Adonis Yatchew currently teaches undergraduate and graduate courses in energy, graduate courses in econometrics and ‘Big Ideas’ courses in the School of Environment with colleagues in physics and classics.
 					</div>
-				</div>
 				</div>
 			</div>
+            -->
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
