--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -39,9 +39,11 @@
       <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
+      -->
       <li class="nav-item active">
         <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
@@ -51,15 +53,19 @@
       <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
+      -->
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../book/index.html">Reading List</a>
       </li>
+      -->
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
@@ -80,12 +86,9 @@
   <div class="card-deck mt-2">
       <div class="card card-body">
         <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/euf.png" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/eu.html"><h4 class="card-title">The EU’s Midlife Crisis</h4></a>
-            <p class="card-text">What happened to get EU to this pivotal stage? What will be the long term impacts of crises affecting the EU, such as Brexit or the migrant situation? Will the EU endure as the strong political force it is today? </p>
+          <div class="col-sm-12">
+            <a href="../plenaries/space.html"><h4 class="card-title">Space exploration vs Climate Change</h4></a>
+            <p class="card-text">Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? The world is falling apart: the carbon levels have never been this high, the ice caps are melting at an unprecedented pace and sea levels are rising. </p>
           </div>
         </div>
       </div>
@@ -94,13 +97,11 @@
   
       <div class="card card-body">
         <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/startupf.png" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/cleanup.html"><h4 class="card-title">Startup Cleanup</h4></a>
-            <p class="card-text">How can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet?
-</p>
+          <div class="col-sm-12">
+            <a href="../plenaries/immig.html"><h4 class="card-title">Immigration</h4></a>
+            <p class="card-text">
+                
+            </p>
           </div>
         </div>
       </div>
@@ -109,12 +110,9 @@
   <div class="card-deck mt-2">
       <div class="card card-body">
         <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/dataf.png" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/data.html"><h4 class="card-title">Data Daycare</h4></a>
-              <p class="card-text">What is the right ethical framework to make decisions about the deployment of automation/AI? How should we think about such things? As we adopt new technologies, who is responsible for the impact of those technologies? </p>
+          <div class="col-sm-12">
+            <a href="../plenaries/educ.html"><h4 class="card-title">Education vs Entrepreneurship</h4></a>
+              <p class="card-text">With technology and innovation at the forefront of future job markets, some argue that the education system has failed to evolve with the times. As the digital age becomes increasingly imposing, it is important to critique the limitations that university may have on creativity. </p>
           </div>
         </div>
       </div>
@@ -123,44 +121,15 @@
   
       <div class="card card-body">
         <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/workerf.png" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/rights.html"><h4 class="card-title">The Plight of Workers’ Rights</h4></a>
-            <p class="card-text">How do large corporations deal with smaller internal issues regarding workers’ rights within the companies most effectively? Has the democratic vaules of the workplace been reduced over the past few decades? </p>
+          <div class="col-sm-12">
+            <a href="../plenaries/sprea.html"><h4 class="card-title">Spread vs Satire</h4></a>
+            <p class="card-text">The current political climate is scary, and classic news reporting makes things seem grim. With headlines like “Proof of Russian collusion found” and “ School shooting takes 10 lives”, it’s becoming harder and harder to find a silver lining to things. </p>
           </div>
         </div>
       </div>
   </div>
   
-  <div class="card-deck mt-2">
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/reconf.png" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/reconcil.html"><h4 class="card-title">Reconciliation and Indigenization</h4></a>
-            <p class="card-text">What is the role of Canadian society in Truth and Reconciliation? How have attitudes about the Indigenous changed since the abolishment of residential schools? </p>
-          </div>
-        </div>
-      </div>
-  
-  
-  
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/defiancef.png" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/defiance.html"><h4 class="card-title">Popular Defiance</h4></a>
-            <p class="card-text">How has the power of social media impacted the current landscape of political thought and activism? Will the ability for unconventional and/or niche individuals to gain followings have a positive or negative impact on our world?
-              </p>
-          </div>
-        </div>
-      </div>
+
   </div>
     
 
