--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Popular Defiance | The World Affairs Conference</title>
-  <meta name="description" content="Hiroshima, Nagasaki, B-52s, tactical nuclear weapons, thermonuclear war–all these have been part of the lexicon of the modern world. As the 21st century prog...">
+  <title>Startup Cleanup | The World Affairs Conference</title>
+  <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -26,8 +26,8 @@
 	</style>
 </head>
 
-
-
+	
+	
 
 	<body>
 
@@ -42,10 +42,12 @@
       <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
-      <li class="nav-item">
+      -->
+      <li class="nav-item active">
         <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
@@ -54,15 +56,19 @@
       <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
+      -->
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../book/index.html">Reading List</a>
       </li>
+      -->
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
@@ -71,61 +77,55 @@
     </ul>
   </div>
 </nav>
-        <div class="container">
+    <!--
+    <div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
 
 		<div class="container">
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Popular Defiance</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/defiancef.png" alt="Nuclear Weapons: Obsolete or the Future picture"/>
+						<h1>Space exploration vs Climate Change</h1>
 						<p class="card-text">
-							<p>With the emergence of the internet and social media as a method to spread political messages, we have seen, along with the polarization of viewpoints, the emergence of political movements on both the left and right that draw mass followings. This has escalated to the point where political thinkers and activists are elevated to near celebrity status. Furthermore, as of January 2018, according to the Pew Research Center, 42% of Canadians accessed news from social media at least once a day, a number that is rapidly growing. As use of social media becomes ever more ubiquitous in the coming decade, it will surely have a large impact on how we think, act, and vote.</p>
+							<p>Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? The world is falling apart: the carbon levels have never been this high, the ice caps are melting at an unprecedented pace and sea levels are rising. Yet billionaires such as Jeff Bezos, Elon Musk and Richard Branson are in a very competitive billionaire space race. This raises the question: should we spend the next 12 years tackling the issue here on Earth or focus on finding a new home? Is it ethical to spend resources in space exploration when our planet is on fire? 
+                            </p>
 
-						</p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
 					</div>
 				</div>
 			</div>
+            <!--
 			<div class="card card-body mt-2">
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/agruzd.png" alt="Anatoliy Gruzd">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Anatoliy Gruzd</h2>
-            Dr. Anatoliy Gruzd is a Canadian Research Chair in Social Media Data Stewardship and Associate Professor at the Ted Rogers School of Management at Ryerson University. He is also a Member of the Royal Society of Canada’s College of New Scholars, Artists and Scientists; a co-editor of a multidisciplinary journal on Big Data and Society; and a founding co-chair of the International Conference on Social Media and Society. Anatoliy is a leader in social media studies and established the first social media research laboratory in North America.
-            Dr. Gruzd examines how social media platforms are changing the ways in which people and organizations communicate, share information, conduct business and form communities, and how these changes impact society. Anatoliy and his team also develop new analytical tools and approaches for discovering and visualizing social media data and online networks. The broad aim of his initiatives is to advance the public’s understanding of the benefits and pitfalls of social media adoption.
+						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
+						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/dcoyne.png" alt="Deborah Coyne">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Deborah Coyne</h2>
-						<p>Ms. Coyne is currently practicing law. In addition to the practice of law, Ms. Coyne is a long-time independent public policy consultant with extensive and wide-ranging experience in the development, implementation and application of public policy measures.
-              </p>
-            <p>In 1983, Ms. Coyne began her career as a lawyer with Blake, Cassels and Graydon in Toronto, specializing in labour law and litigation. She also spent two years teaching law at the University of Toronto and has worked on legal and policy matters in the areas of Health, Human Rights, assistance to disabled persons, national business issues, constitutional reform, and refugee and immigration adjudication.
-              </p>
-            <p>Ms. Coyne has served as a Policy Advisor and Analyst for various federal and Ontario Boards and Commissions. She has been a Board Member with the Canadian Immigration and Refugee Board in Toronto and Ottawa, and with the Health Professions and Health Insurance Appeal and Review Boards, both in Toronto. As such, she has gained deep insights into the functioning of public and quasi-judicial institutions, not only in terms of the implementation of their statutory mandates, but, as well, of their relationships with governments.
-              </p>
-            <p>Ms. Coyne has been very involved in the political process in Canada, having worked in policy research for a major political party and as a policy advisor for a provincial premier. She has also been a candidate for various political offices.
-              </p>
+						<h2 class="text-center text-md-left">Adonis Yatchew</h2>
+						Adonis Yatchew’s research focuses on energy and regulatory economics, and econometrics. Since completing his Ph.D. at Harvard University, he has taught at the University of Toronto. He has also held visiting appointments at Trinity College, Cambridge University, the University of Chicago and Australian National University, among others. He the Editor-in-Chief of The Energy Journal. He has advised public and private sector companies on energy, regulatory and other matters for over 25 years and has provided testimony in numerous regulatory and litigation procedures. Adonis Yatchew currently teaches undergraduate and graduate courses in energy, graduate courses in econometrics and ‘Big Ideas’ courses in the School of Environment with colleagues in physics and classics.
 					</div>
 				</div>
 			</div>
+            -->
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
-					<a class="card-link" href="/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
+					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
 				</p>
 			</div>
 		</div>
@@ -148,5 +148,6 @@
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/tether.min.js></script>
+
 	</body>
 </html>
