--- a/plenaries/sprea.html
+++ b/plenaries/sprea.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+	<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Keynote | The World Affairs Conference</title>
-  <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
+  <title>Startup Cleanup | The World Affairs Conference</title>
+  <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -26,9 +26,12 @@
 	</style>
 </head>
 
+	
+	
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	<body>
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -36,7 +39,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <!--
@@ -44,7 +47,7 @@
         <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       -->
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
@@ -74,78 +77,62 @@
     </ul>
   </div>
 </nav>
-    <!--<div class="container">
+    <!--
+    <div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
     </div>-->
 
-   
 
-      <div class="container">
-  <div class="card">
-    <div class="card-body">
-      <h1 class="text-center"> WAC 2019: Young People’s World: Making Your Future Energy, Climate & Human Rights</h1>
-        <p class = "text-center">
-            How can we use democracy as a tool for solving climate change? Do we have a responsibility to reflect scientific findings in policy? What power does today’s youth have in shaping the future of our climate? 
-        </p>
-        <hr>
-      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/Jhansenspeak.jpg" alt="Dr. James Hansen"/>
-        
-      <h2 class="text-center">Dr. James Hansen</h2>
-      <p>
-        Dr. James Hansen will address these key issues and more in his Keynote Address. We will have the fortune of hearing not only about his extensive experience as an environmental advocate, scientist, and professor, but also the opportunity to engage in an open-discourse on the climate. We request that students come to the address with questions and issues in mind. The address will not merely be a lecture, but a two-way exchange of ideas.
-      </p>
-    </div>
-  </div>
-  <div class="card-deck mt-2">
-    <div class="card">
-      <img class="card-img-top img-fluid" src="../img/speakers/hinton.jpg" alt="Geoffrey Hinton">
-      <div class="card-body">
-        <h3 class="card-title">WAC 2018: Professor Geoffrey Hinton</h3>
-        <p class="card-text">
-          Geoffrey Hinton was one of the researchers who introduced the backpropagation algorithm and the first to use backpropagation for learning word embeddings. His other contributions to neural network research include Boltzmann machines, distributed representations, time-delay neural nets, mixtures of experts, variational learning and deep learning. His research group in Toronto made major breakthroughs in deep learning that revolutionized speech recognition and object classification.
-        </p>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top img-fluid" src="../img/snowden.png" alt="Picture of Edward Snowden">
-      <div class="card-body">
-        <h3 class="card-title">WAC 2015: Edward Snowden</h3>
-        <p class="card-text">
-          Five years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
-        </p>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top img-fluid" src="../img/avatar.png" alt="Decorative Image">
-      <div class="card-body">
-        <h3 class="card-title">Previous WAC Speakers</h3>
-        <p class="card-text">
-    			WAC has featured many current, popular, and influential speakers in the past. Here's a quick summary of some big names at WAC:
-    			</br>
-          <b>Nanor Balyozian</b> - Syrian political advocate
-          </br>
-    			<b>Dr. Samantha Nutt</b> - Founder of War Child North America
-    			</br>
-    			<b>Stephen Lewis</b> - former United Nations ambassador
-    			</br>
-    			<b>Ralph Nader</b> - American political activist
-    			</br>
-    			<b>Lord David Owen</b> - former British Foreign Secretary
-    			</br>
-    			<b>Marc Garneau</b> - astronaut turned politician
-    			</br>
-    			<b>John Stackhouse</b> - editor of the Globe and Mail
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
+		<div class="container">
+			<div class="text-center">
+				<div class="card">
+					<div class="card-body">
+						<h1>Spread vs Satire</h1>
+						<p class="card-text">
+							<p>The current political climate is scary, and classic news reporting makes things seem grim. With headlines like “Proof of Russian collusion found” and “ School shooting takes 10 lives”, it’s becoming harder and harder to find a silver lining to things. If you go online, it is clear that many people find solace in political satire, with comedians like John Olivers and Trevor Noah having millions of subscribers. In this kind of political climate, satire is a double-edged sword: One can laugh along with it, a small beacon of humour in an otherwise grim world, but it can also be used as a crude one-liner to attack well-constructed ideas and spread disinformation. What distinguishes between satire and blatant fake news? And who is to decide when a piece of satire finally crosses the line? 
 
 
+                            </p>
 
-    <footer class="footer text-center mt-3">
+						<p class="card-text">
+							More information on plenaries and programs are coming soon.
+						</p>
+					</div>
+				</div>
+			</div>
+            <!--
+			<div class="card card-body mt-2">
+				<h1 class="text-center">Speakers</h1>
+				<div class="row pb-2">
+					<div class="col-md-4">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
+					</div>
+					<div class="col-md-8">
+						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
+						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
+					</div>
+					<div class="col-md-8">
+						<h2 class="text-center text-md-left">Adonis Yatchew</h2>
+						Adonis Yatchew’s research focuses on energy and regulatory economics, and econometrics. Since completing his Ph.D. at Harvard University, he has taught at the University of Toronto. He has also held visiting appointments at Trinity College, Cambridge University, the University of Chicago and Australian National University, among others. He the Editor-in-Chief of The Energy Journal. He has advised public and private sector companies on energy, regulatory and other matters for over 25 years and has provided testimony in numerous regulatory and litigation procedures. Adonis Yatchew currently teaches undergraduate and graduate courses in energy, graduate courses in econometrics and ‘Big Ideas’ courses in the School of Environment with colleagues in physics and classics.
+					</div>
+				</div>
+			</div>
+            -->
+			<div class="card card-body text-center mt-2">
+				<p class="card-text">
+					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
+				</p>
+			</div>
+		</div>
+		</br>
+		<footer class="footer text-center mt-3">
   <div class="container">
     <p>
       The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
@@ -164,7 +151,5 @@
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/tether.min.js></script>
 
-
-  </body>
-
+	</body>
 </html>
