--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="text-center">
       This Year's Theme:
-      <h1 class="display-4">Inception</h1>
+      <h1 class="display-4">World Gone WAC</h1>
     </div>
     <div class="text-center text-md-right">
       <h4>The Conference is</h4>
