--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -98,7 +98,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="../plenaries/immig.html"><h4 class="card-title">Immigration</h4></a>
+            <a href="../plenaries/pol.html"><h4 class="card-title">Political Tribalism</h4></a>
             <p class="card-text">
                 
             </p>
