--- a/plenaries/pol.html
+++ b/plenaries/pol.html
@@ -89,7 +89,7 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Immigration</h1>
+						<h1>Political Tribalism</h1>
 						<p class="card-text">
 							
 						<p class="card-text">
