Added some more info

--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -99,8 +99,7 @@
         <div class="row">
           <div class="col-sm-12">
             <a href="../plenaries/pol.html"><h4 class="card-title">Political Tribalism</h4></a>
-            <p class="card-text">
-                
+            <p class="card-text">Immigration has never been more important than it is today. With 1 in every 30 people living outside their country of birth, there have never been higher levels of movement recorded. However, issues surrounding refugees, illegal immigrants, and asylum seekers are on the rise.
             </p>
           </div>
         </div>
