--- a/plenaries/pol.html
+++ b/plenaries/pol.html
@@ -91,7 +91,11 @@
 					<div class="card-body">
 						<h1>Political Tribalism</h1>
 						<p class="card-text">
-							
+							Immigration has never been more important than it is today. With 1 in every 30 people living outside their country of birth, there have never been higher levels of movement recorded. However, with issues surrounding refugees, illegal immigrants, and asylum seekers on the rise, countries must create and strengthen existing immigration policies in order to create the best situation possible for all. In a time where we are witnessing both the highest levels of movement and the highest levels of displacement ever recorded, how will different countries continue to manage their immigration systems while keeping the amount of refugees, illegal immigrants, and asylum seekers in check? What happens to the immigrants and refugees once they land in Canada?
+                        </p>
+                        <p class="card-text">
+                            The Immigration and Integration plenary will focus on the different immigration systems employed in various countries across the world, different approaches to dealing with displaced persons, and different systems of integration, as well as current world issues such as the Syrian refugee crisis and the US border detention camps. As the number of potential immigrants and displaced persons continues to increase, we must ask the question: What is the best way to satisfy both the needs of immigrants as well as those of the societies that receive them?
+                        </p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
