quick name change

--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -87,7 +87,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="../plenaries/space.html"><h4 class="card-title">Space exploration vs Climate Change</h4></a>
+            <a href="../plenaries/space.html"><h4 class="card-title">Space Exploration vs Climate Change</h4></a>
             <p class="card-text">Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? The world is falling apart: the carbon levels have never been this high, the ice caps are melting at an unprecedented pace and sea levels are rising. </p>
           </div>
         </div>
@@ -98,7 +98,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="../plenaries/pol.html"><h4 class="card-title">Political Tribalism</h4></a>
+            <a href="../plenaries/pol.html"><h4 class="card-title">Immigration</h4></a>
             <p class="card-text">Immigration has never been more important than it is today. With 1 in every 30 people living outside their country of birth, there have never been higher levels of movement recorded. However, issues surrounding refugees, illegal immigrants, and asylum seekers are on the rise.
             </p>
           </div>
