--- a/plenaries/pol.html
+++ b/plenaries/pol.html
@@ -89,7 +89,7 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Political Tribalism</h1>
+						<h1>Immigration</h1>
 						<p class="card-text">
 							Immigration has never been more important than it is today. With 1 in every 30 people living outside their country of birth, there have never been higher levels of movement recorded. However, with issues surrounding refugees, illegal immigrants, and asylum seekers on the rise, countries must create and strengthen existing immigration policies in order to create the best situation possible for all. In a time where we are witnessing both the highest levels of movement and the highest levels of displacement ever recorded, how will different countries continue to manage their immigration systems while keeping the amount of refugees, illegal immigrants, and asylum seekers in check? What happens to the immigrants and refugees once they land in Canada?
                         </p>
