--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -89,7 +89,7 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Space exploration vs Climate Change</h1>
+						<h1>Space Exploration vs Climate Change</h1>
 						<p class="card-text">
 							<p>Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? The world is falling apart: the carbon levels have never been this high, the ice caps are melting at an unprecedented pace and sea levels are rising. Yet billionaires such as Jeff Bezos, Elon Musk and Richard Branson are in a very competitive billionaire space race. This raises the question: should we spend the next 12 years tackling the issue here on Earth or focus on finding a new home? Is it ethical to spend resources in space exploration when our planet is on fire? 
                             </p>
