--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
           Journeying into the next decade, we realize the importance of hosting a modern conference and have subsequently developed a reformed structure for WAC for students that should be very exciting. To give a brief rundown, our annual conference in February will be focused on three different takeaways: experiential learning, innovation, and competition.
                 
         </p>
-        <div class = "text-center">
+        <!--<div class = "text-center">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#wacathon">
               Learn More
           </button>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
