--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
           Journeying into the next decade, we realize the importance of hosting a modern conference and have subsequently developed a reformed structure for WAC for students that should be very exciting. To give a brief rundown, our annual conference in February will be focused on three different takeaways: experiential learning, innovation, and competition.
                 
         </p>
-        <!--<div class = "text-center">
+        <div class = "text-center">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#wacathon">
               Learn More
           </button>
-        </div>-->
+        </div>
       </div>
     </div>
   </div>
@@ -151,8 +151,8 @@
         <h5>Experiential Learning / Innovation</h5>
         <p>These two will be highlighted in the newly developed program on the day of WAC where students will participate in meaningful workshops pertinent to the plenary discussion that they choose. This will then be followed up by an engaging session in which students will be able to apply their newly acquired knowledge on the topics in creative ways. Following this, students will have the opportunity to participate in an engaging workshop wherein they will apply their newly acquired knowledge on the topics in creative ways.</p>
           
-        <h5>Competition / WAC-A-THON</h5>
-        <p>Our most exciting addition to WAC this year is the adoption of an exclusive stream called WAC-A-THON. Specific to the education problems that exist for youth in our society today, 50-75 students across the GTA will be selected via a rigorous application method or nominally by educators across the region to participate in the WAC-A-THON and create solutions to these educational problems on the day of WAC. Along with these two streams will be a Startup Exhibition where students will be able to engage with Toronto’s entrepreneurial community and learn more about newly developing technologies. Stay tuned for more regarding the WAC-A-THON, Startup Exhibition, and more!</p>
+        <h5>Competition!</h5>
+        <p>Our most exciting decision to WAC this year is the adoption of an exclusive stream. This design sprint will take place separate from the regular activities on the day of WAC, and will culminate in a pitch competition in front of a panel of top educators across Toronto. The theme for this stream is "Hacking Education," and students will be tasked to design their very own education system of the future. Only 50 students will be accepted into this stream from across the GTA, so we encourage you begin the application process as soon as it opens. Stay tuned for more updates.</p>
 
       </div>
       <div class="modal-footer">
