--- a/schedule/index.html
+++ b/schedule/index.html
@@ -39,9 +39,11 @@
       <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
+      -->
       <li class="nav-item">
         <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
@@ -57,9 +59,6 @@
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../book/index.html">Reading List</a>
-      </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
@@ -70,17 +69,17 @@
 </nav>
 
 
-    <div class="container">
+    <!--<div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
       <div class="container">
   <div class="card card-body">
-    <h1 class="text-center">WAC 2019 Schedule</h1>
+    <h1 class="text-center">WAC Regular Stream</h1>
     <!--<p class="text-center">(<a href="../files/schedule_2018.pdf">PDF copy</a>)</p>-->
-    <h2 class="text-center mt-2">Febuary 4th, Keynote Address</h2>
+    <h2 class="text-center mt-2">Febuary 3rd, Keynote Address</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
     	  <thead class="thead-dark">
@@ -93,7 +92,7 @@
     	  <tbody>
     	    <tr>
     	      <td>Doors Open</td>
-    	      <td>6:30 to 7:00</td>
+    	      <td>6:00 to 7:00</td>
     	      <td>Main Foyer</td>
     	    </tr>
     	    <tr>
@@ -109,7 +108,7 @@
     	  </tbody>
     	</table>
     </div>
-    <h2 class="text-center">Febuary 5th, Conference Day</h2>
+    <h2 class="text-center">Febuary 4th, Conference Day</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
     	  <thead class="thead-dark">
@@ -122,47 +121,52 @@
     	  <tbody>
     	    <tr>
     	      <td>Registration</td>
-    	      <td>8:30 to 9:00</td>
+    	      <td>9:00 to 9:30</td>
     	      <td>Main Foyer</td>
     	    </tr>
     	    <tr>
     	      <td>Opening Address</td>
-    	      <td>9:00 to 10:00</td>
+    	      <td>9:30 to 10:00</td>
+    	      <td>Laidlaw Hall</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Panel Q&A</td>
+    	      <td>10:00 to 10:20</td>
     	      <td>Laidlaw Hall</td>
     	    </tr>
     	    <tr>
     	      <td>Break</td>
-    	      <td>10:00 to 10:10</td>
+    	      <td>10:20 to 10:30</td>
     	      <td></td>
     	    </tr>
     	    <tr>
-    	      <td>First Session</td>
-    	      <td>10:10 to 11:15</td>
+    	      <td>Plenary Session #1</td>
+    	      <td>10:35 to 11:10</td>
     	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
     	    </tr>
     	    <tr>
-    	      <td>Break</td>
-    	      <td>11:15 to 11:25</td>
-    	      <td></td>
-    	    </tr>
-    	    <tr>
-    	      <td>Second Session</td>
-    	      <td>11:25 to 12:30</td>
+    	      <td>Plenary Session #2</td>
+    	      <td>11:15 to 11:50</td>
     	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
     	    </tr>
     	    <tr>
-    	      <td>Lunch</td>
-    	      <td>12:30 to 1:15</td>
-    	      <td>Lett Gym</td>
+    	      <td>Lunch & Start Up Exhibition</td>
+    	      <td>11:50 to 1:15</td>
+    	      <td>Old Gym</td>
     	    </tr>
     	    <tr>
-    	      <td>Third Session</td>
-    	      <td>1:15 to 2:20</td>
-    	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
+    	      <td>Michelle Romanow Address</td>
+    	      <td>1:15 to 2:15</td>
+    	      <td>Laidlaw Hall</td>
     	    </tr>
-    	    <tr>
-    	      <td>Closing Address</td>
-    	      <td>2:30 to 3:30</td>
+            <tr>
+    	      <td>Michelle Romanow Q&A</td>
+    	      <td>2:15 to 2:45</td>
+    	      <td>Laidlaw Hall</td>
+    	    </tr>
+            <tr>
+    	      <td>Awards and Presentation</td>
+    	      <td>2:45 to 3:30</td>
     	      <td>Laidlaw Hall</td>
     	    </tr>
     	  </tbody>
