Keynote and purging old photos
Check

--- a/keynote/index.html
+++ b/keynote/index.html
@@ -78,26 +78,28 @@
       <div class="container">
   <div class="card">
     <div class="card-body">
-      <h1 class="text-center"> WAC 2019: Young People’s World: Making Your Future Energy, Climate & Human Rights</h1>
+      <h1 class="text-center"> WAC 2020: On the Brink of War: What You Need To Know About the US and Iran</h1>
         <p class = "text-center">
-            How can we use democracy as a tool for solving climate change? Do we have a responsibility to reflect scientific findings in policy? What power does today’s youth have in shaping the future of our climate? 
+            In the wake of Donald Trump's controversial decision to assassinate General Qassim Soleimani, Mehdi Hasan analyzes the ongoing tensions between the United Stated of America and the Republic of Iran, unpacks the history behind the fraught relations between the two countries, and offers his own solutions for ending four decades of enmity.
         </p>
-        <hr>
-      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/Jhansenspeak.jpg" alt="Dr. James Hansen"/>
+       <!-- <hr>
+      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/.jpg" alt="Dr. James Hansen"/>
         
       <h2 class="text-center">Dr. James Hansen</h2>
       <p>
         Dr. James Hansen will address these key issues and more in his Keynote Address. We will have the fortune of hearing not only about his extensive experience as an environmental advocate, scientist, and professor, but also the opportunity to engage in an open-discourse on the climate. We request that students come to the address with questions and issues in mind. The address will not merely be a lecture, but a two-way exchange of ideas.
-      </p>
+      </p> -->
     </div>
   </div>
   <div class="card-deck mt-2">
     <div class="card">
-      <img class="card-img-top img-fluid" src="../img/speakers/hinton.jpg" alt="Geoffrey Hinton">
+      <img class="card-img-top img-fluid" src="../img/speakers/jhansen.png" alt="James Hansen">
       <div class="card-body">
-        <h3 class="card-title">WAC 2018: Professor Geoffrey Hinton</h3>
+        <h3 class="card-title">WAC 2019: Professor James Hansen</h3>
         <p class="card-text">
-          Geoffrey Hinton was one of the researchers who introduced the backpropagation algorithm and the first to use backpropagation for learning word embeddings. His other contributions to neural network research include Boltzmann machines, distributed representations, time-delay neural nets, mixtures of experts, variational learning and deep learning. His research group in Toronto made major breakthroughs in deep learning that revolutionized speech recognition and object classification.
+         Dr. James Hansen was one of the leading researchers on climatology, his 1988 Congressional testimony on climate change helped raise broad awareness of global warming. At WAC 2019, he presented on the future of energy production and the role that young people have. His presentation was unique, as it was not merely a lecture, but a two-way exchange of ideas with the audience. His extensive experience as an environmental advocate, scientist, and professor, made for a very informative discourse on the climate.
+
+            
         </p>
       </div>
     </div>
